--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
     <main>
         <section>
-            <h2>Portafolios de Proyectos</h2>
-            <p>Mi nombre es Santiago Zelaya, soy estudiante de Programacion en la Universidad Nacional de Tucuman y además estudio cursos y lenguajes independientes de manera autoeducativa.</p>
+            <h2>Presentacion</h2>
+            <p>Mi nombre es Santiago Zelaya, soy estudiante de Programacion de la Universidad Nacional de Tucuman en la Facultad de Ciencias Exactas y Tecnologia. Además estudio cursos y lenguajes de programacion de manera independiente.</p>
             <br>
             <p>Les presento mi portafolios de proyectos donde aplique varios conceptos de mi aprendizaje</p>
             <figure>
