--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -25,8 +25,10 @@
         </nav>
     </header>
     <main id="mainP">
-        <aside>
-            <ul>
+        <aside id="contenedor-menu">
+            <a href="#contenedor-menu" id="abrir" class="menD">Proyectos ↓</a>
+            <a href="#" id="cerrarMenu" class="menD">Proyectos ↑</a>
+            <ul id="contenedor-enlaces">
                 <li id="ap">Aplicacion de Presupuesto</li>
                 <li id="camara">Camara</li>
                 <li id="cb">Comprobar Billeteras o CBU</li>
@@ -46,8 +48,9 @@
                 <p id="cerrar"></p>
             </article>
         </section>
+        <a id="bton" href="#">↑</a>
     </main>
-    <footer>
+    <footer id="ft">
         <p>© Todos los Derechos Reservados</p>
         <p>Santiago Zelaya</p>
     </footer>
