--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body id="bodyMain">
-    <header id="hMain" style="position: fixed;">
+    <header id="hMain" style="position: fixed;background-color: transparent;">
         <nav>
             <ul id="ulMenu">
                 <li><a href="#">Home</a></li>
