--- a/html/contacto.html
+++ b/html/contacto.html
@@ -34,6 +34,7 @@
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/santiago-zelaya-40bb081b3" Target="_blank">Santiago Zelaya</a> </p>
                 <p>Email: <a href="mailto:santiago991007@gmail.com" Target="_blank">santiago991007@gmail.com</a></p>
             </article>
+             <figure id="figContact"><img src="../img/logo_white_large.png"></figure>
         </section>
     </main>
 </body>
