--- a/proyectos.html
+++ b/proyectos.html
@@ -1,58 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos</title>
-    <meta name="author" content="Santiago Zelaya">
-    <meta name="description" content="Portafolios de proyectos de desarrollador web">
-    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="../img/favico.png" size="32x32">
-</head>
-
-<body>
-    <header id="hMain">
-        <a id="logoLink" href="index.html"><figure id="logo"><img src='img/logo_large.png'></figure></a>
-        <nav>
-            <ul id="ulMenu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#sectionMain2">Sobre mi</a></li>
-                <li><a href="proyectos.html">Proyectos</a></li>
-                <li><a href="contacto.html" id="contact">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main id="mainProyectos">
-        <aside id="contenedor-menu">
-            <a href="#contenedor-menu" id="abrir" class="menD">Proyectos ↓</a>
-            <a href="#" id="cerrarMenu" class="menD">Proyectos ↑</a>
-            <ul id="contenedor-enlaces">
-                <li class="proyectos" id="ap">Aplicacion de Presupuesto</li>
-                <li class="proyectos" id="camara">Aplicacion de Camara</li>
-                <li class="proyectos" id="cb">Comprobar Billeteras o CBU</li>
-                <li class="proyectos" id="galeria">Galeria</li>
-                <li class="proyectos" id="blocks">Generador de Bloques</li>
-                <li class="proyectos" id="list">Listado de Personas</li>
-                <li class="proyectos" id="menu">Menu con opciones despliegables</li>
-                <li class="proyectos" id="reloj">Reloj</li>
-                <li class="proyectos" id="pixelArt">Pixel Art</li>
-            </ul>
-        </aside>
-        <section id="art">
-            <h2 id="h2P">← Selecciona un Proyecto</h2>
-            <p id="pP">Los proyectos son prototipos que están en version Beta, siempre se van mejorando y optimizando con el tiempo.</p>
-            <article id="artA">
-                <h2 id="PT"></h2>
-                <p id="PD"></p>
-                <div id="PL"></div>
-                <p id="cerrar"></p>
-            </article>
-        </section>
-    </main>
-</body>
-
-<script src="js/appProyectos.js"></script>
-</html>
+<!doctype html><html lang="es"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Proyectos</title><meta name="author" content="Santiago Zelaya"><meta name="description" content="Portafolios de proyectos de desarrollador web"><link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"><link rel="stylesheet" href="css/style.css"><link rel="icon" type="image/png" href="../img/favico.png" size="32x32"><script async src="https://www.googletagmanager.com/gtag/js?id=G-ESXSGGJ3GD"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-ESXSGGJ3GD")</script></head><body><header id="hMain"><a id="logoLink" href="index.html"><figure id="logo"><img src="img/logo_large.png"></figure></a><nav><ul id="ulMenu"><li><a href="index.html">Home</a></li><li><a href="index.html#sectionMain2">Sobre mi</a></li><li><a href="proyectos.html">Proyectos</a></li><li><a href="contacto.html" id="contact">Contacto</a></li></ul></nav></header><main id="mainProyectos"><aside id="contenedor-menu"><a href="#contenedor-menu" id="abrir" class="menD">Proyectos ↓</a> <a href="#" id="cerrarMenu" class="menD">Proyectos ↑</a><ul id="contenedor-enlaces"><li class="proyectos" id="ap">Aplicacion de Presupuesto</li><li class="proyectos" id="camara">Aplicacion de Camara</li><li class="proyectos" id="cb">Comprobar Billeteras o CBU</li><li class="proyectos" id="galeria">Galeria</li><li class="proyectos" id="blocks">Generador de Bloques</li><li class="proyectos" id="list">Listado de Personas</li><li class="proyectos" id="menu">Menu con opciones despliegables</li><li class="proyectos" id="reloj">Reloj</li><li class="proyectos" id="pixelArt">Pixel Art</li></ul></aside><section id="art"><h2 id="h2P">← Selecciona un Proyecto</h2><p id="pP">Los proyectos son prototipos que están en version Beta, siempre se van mejorando y optimizando con el tiempo.</p><article id="artA"><h2 id="PT"></h2><p id="PD"></p><div id="PL"></div><p id="cerrar"></p></article></section></main></body><script src="js/appProyectos.js"></script></html>
